# prior-moves

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/super_investor/: __init__.py  backtest.py  channel_join.py  compare.py  eval_gates.py  events.py  factor_label.py  impact_model.py  investors.py  labels.py  leakproof_backtest.py  online_impact.py  portfolio.py  scoring.py  secrets.py
src/super_investor/adapters/: __init__.py  aaii_sentiment.py  alpha_vantage.py  ark_invest.py  cftc_cot.py  congress.py  damodaran.py  dataroma.py  edgar_8k.py  edgar_forms.py  edgar_riskfactors.py  finnhub.py  finra_short_interest.py  finviz.py  form4.py  fred.py  ft_alphaville.py  gdelt_tone.py  gemma_embedder.py  google_trends.py  guardian_api.py  gurufocus.py  hackernews.py  insider_monkey.py  ken_french.py  macrotrends.py  motleyfool_transcripts.py  news_rss.py  nyt_api.py  openfigi.py  openinsider.py  options_yf.py  pocket_export.py  polygon.py  price_channel.py  prices.py  reddit_dd.py  reddit_history.py  reddit_public.py  sec_13f.py  (+20 more)
src/super_investor/models/: baseline.py  per_investor.py
tests/: test_channel_join.py  test_commodity_prices.py  test_corporate_events.py  test_eval_gates.py  test_evidence_reproduces.py  test_factor_label.py  test_feature_dedup.py  test_filings_embeddings_channel.py  test_impact_model.py  test_leakage_audit.py  test_leakproof_backtest.py  test_macro_weekly.py  test_online_impact.py  test_scoring_portfolio.py  test_smoke.py
tests/fixtures/: leakproof_holdings.py
