[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-investor-mirror"
version = "0.1.0"
description = "Predict + compare super-investor 13F picks quarter-over-quarter"
requires-python = ">=3.12"  # matches the deployed runtime (Dockerfile: python:3.12-slim)
dependencies = [
    "httpx>=0.27",
    "lxml>=5.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "yfinance>=0.2.40",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.47",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
